k8s-manifests/webhook/0_ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: image-annotator
  name: image-annotator
