k8s-manifests/webhook/2_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: image-annotator-webhook
    image-annotator-webhook/exclude: "true"
  name: image-annotator-webhook
  namespace: image-annotator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: image-annotator-webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/name: image-annotator-webhook
        image-annotator-webhook/exclude: "true"
    spec:
      containers:
        - image: image-annotator-webhook:latest
          imagePullPolicy: Never
          name: image-annotator-webhook
          resources: {}
          volumeMounts:
            - name: tls
              mountPath: "/etc/image-annotator-webhook/tls"
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: image-annotator-webhook-tls
