k8s-manifests/webhook/2_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: image-annotator-webhook
  name: image-annotator-webhook
  namespace: image-annotator
spec:
  type: ClusterIP
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: image-annotator-webhook
