k8s-manifests/webhook/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: image-annotator
  name: image-annotator
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: image-annotator
